static/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: static
  labels:
    app: nginx
spec:
  type: ClusterIP # only in cluster
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
